# InsideOutTracking-apriltags

./: CMakeLists.txt  README.md
OpenIGTLink-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  OpenIGTLinkBuildSettings.cmake  OpenIGTLinkConfig.cmake  cmake_install.cmake  install_manifest.txt
OpenIGTLink-build/Examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/Bind/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/Capability/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/ImageDatabaseServer/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/ImageMeta/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/Imager/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/Point/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/PolyData/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/QuaternionTrackingData/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/Receiver/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Examples/SessionManager/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Source/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
OpenIGTLink-build/Utilities/: OpenIGTLinkConfig.cmake
apriltags-build/: CMakeCache.txt  cmake_install.cmake
apriltags-build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  tmp_cmakeRulesBuildPhase.makeRelease
apriltags-build/apriltags.xcodeproj/: project.pbxproj
apriltags-build/example/: cmake_install.cmake
example/: CMakeLists.txt  Serial.h  apriltags_demo.cpp
igtl/: igtlConfigure.h
src/: TagDetection.cc  TagDetector.cc  TagFamily.cc
(+320 files in other folders)
